--- a/index.html
+++ b/index.html
@@ -43,9 +43,7 @@
   </div>
 
 <!-- particles.js container -->
-<div id="particles-js">
-  <h1> Life is greater with Coding</h1>
-</div>
+<div id="particles-js"></div>
 
 <div id="#HOME" class="w3-container" style="background-color: transparent">
   <div class="centered" style>
@@ -124,7 +122,7 @@
       <div class="w3-col m6 w3-large w3-margin-bottom">
         <i class="fa fa-map-marker" style="width:30px"></i> Singapore, SG<br>
         <i class="fa fa-phone" style="width:30px"></i> Phone: +65 9018 1182<br>
-        <i class="fa fa-envelope" style="width:30px"> </i> Email: IloveSyed@gmail.com<br>
+        <i class="fa fa-envelope" style="width:30px"> </i> Email: DSOH010@e.ntu.edu.sg<br>
       </div>
       <div class="w3-col m6">
         <form action="/action_page.php" target="_blank">
