--- a/index.html
+++ b/index.html
@@ -55,24 +55,39 @@
 
 
 <!--#SWE-->
-<div class="w3-container w3-content w3-center w3-padding-64" style="max-width:800px" id="SWE">
-  <h2 class="w3-wide">SOFTWARE ENGINEERING PROJECTS</h2>
-  <p class="w3-opacity"><i>Life is better with coding!</i></p>
-  <p class="w3-justify">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip
-    ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum consectetur
-    adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-  <div class="w3-row w3-padding-32">
-    <div class="w3-third">
-      <p>Android</p>
-      <img src="/w3images/android.jpg" class="w3-round w3-margin-bottom" alt="Random Name" style="width:60%">
-    </div>
-    <div class="w3-third">
-      <p>MYSQL</p>
-      <img src="/w3images/mysql" class="w3-round w3-margin-bottom" alt="Random Name" style="width:60%">
-    </div>
-    <div class="w3-third">
-      <p>Name</p>
-      <img src="/w3images/bandmember.jpg" class="w3-round" alt="Random Name" style="width:60%">
+<div class="w3-black" id="SWE">
+  <div class="w3-container w3-content w3-padding-64" style="max-width:800px">
+    <h2 class="w3-wide w3-center">SOFTWARE ENGINEERING PROJECTS</h2>
+    <p class="w3-opacity w3-center"><i>The all seeing eye of Coding</i></p><br>
+
+    <div class="w3-row-padding w3-padding-32" style="margin:0 -16px">
+      <div class="w3-third w3-margin-bottom">
+        <img src="/w3images/newyork.jpg" alt="New York" style="width:100%" class="w3-hover-opacity">
+        <div class="w3-container w3-white">
+          <p><b>MC for ART</b></p>
+          <p class="w3-opacity">IEEE Hackathon</p>
+          <p>telebot with google script API. CNN model in google cloud, Image Classification, Keras</p>
+          <button class="w3-button w3-black w3-margin-bottom" onclick="document.getElementById('ticketModal').style.display='block'">View Project</button>
+        </div>
+      </div>
+      <div class="w3-third w3-margin-bottom">
+        <img src="/w3images/paris.jpg" alt="Paris" style="width:100%" class="w3-hover-opacity">
+        <div class="w3-container w3-white">
+          <p><b>Not now lizards!</b></p>
+          <p class="w3-opacity">MLDA</p>
+          <p>Computer Vision, Arduino, ROS</p>
+          <button class="w3-button w3-black w3-margin-bottom" onclick="document.getElementById('ticketModal').style.display='block'">In progress</button>
+        </div>
+      </div>
+      <div class="w3-third w3-margin-bottom">
+        <img src="/w3images/sanfran.jpg" alt="San Francisco" style="width:100%" class="w3-hover-opacity">
+        <div class="w3-container w3-white">
+          <p><b>Titanic Disaster Prediction</b></p>
+          <p class="w3-opacity"></p>
+          <p>ML models, Data cleaning, Variance Testing, Feature engineering.</p>
+          <button class="w3-button w3-black w3-margin-bottom" onclick="document.getElementById('ticketModal').style.display='block'">View Project</button>
+        </div>
+      </div>
     </div>
   </div>
 </div>
