--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
   </div>
 
 <!-- particles.js container -->
-<div id="particles-js"></div>
+<div class="w3-container" id="particles-js"></div>
 
 <div id="#HOME" class="w3-container" style="background-color: transparent">
   <div class="centered" style>
@@ -53,6 +53,7 @@
   </div>
 </div>
 
+<div class="w3-container" id="particles-js"></div>
 
 <!--#SWE-->
 <div class="w3-black" id="SWE">
