--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
   </div>
 </div>
 
-<div class="w3-container" id="particles-js"></div>
+<div class="w3-container" id="particles-js1"></div>
 
 <!--#SWE-->
 <div class="w3-black" id="SWE">
