--- a/index.html
+++ b/index.html
@@ -43,7 +43,26 @@
   </div>
 
 <!-- particles.js container -->
-<div class="w3-container" id="particles-js"></div>
+<div id="particles-js">
+  <section class="seperator-wrapper">
+    <div class="seperator gradient">
+    </div>
+ </section>
+ <h2 class="animate__animated animate__fadeInLeft" style="font-family:monospace; font-weight: 500;font-style: normal; text-align:center; color:Black">arr3</h2>
+ <h4 style="font-family:monospace; font-weight: 500; font-style: normal; text-align:center; color:Black"> I love coding.</h4>
+ <br>
+ <button onclick="location.href = 'info.html'"
+    style="font-family:monospace; font-weight: 500; font-style: normal; text-align:center; color:black" class="border-button">Want to learn more?</button>
+ <br>
+ <div class="button-wrap">
+    <button onclick="location.href = 'mobydick.html'"
+       style="font-family:monospace; font-weight: 500; font-style: normal; text-align:center; color:black" class="border-button">Read Moby Dick</button>
+    <br>
+    <button onclick="location.href = 'hmrkey.html'"
+       style="font-family:monospace; font-weight: 500; font-style: normal; text-align:center; color:black" class="border-button">HammerHead Key</button>
+ </div>
+
+</div>
 
 <div id="#HOME" class="w3-container" style="background-color: transparent">
   <div class="centered" style>
@@ -53,7 +72,6 @@
   </div>
 </div>
 
-<div class="w3-container" id="particles-js1"></div>
 
 <!--#SWE-->
 <div class="w3-black" id="SWE">
