--- a/index.html
+++ b/index.html
@@ -45,28 +45,30 @@
 <!-- particles.js container -->
 <div id="particles-js">
   <section class="seperator-wrapper">
-    <div class="seperator gradient">
-    </div>
+      <div id="#HOME" class="seperator gradient" style="background-color: transparent">
+        <div class="centered" style>
+          <div class="typewriter">
+            <h1> Life is greater with Coding</h1>
+          </div>
+        </div>
+      </div>
   </section>
-  <h5 class="animate__animated animate__fadeInLeft" style="font-family:monospace; font-weight: 500;font-style: normal; text-align:center; color:Black">arr3</h5>
-  <h6 style="font-family:monospace; font-weight: 500; font-style: normal; text-align:center; color:Black"> I love coding.</h6>
-
 </div>
 
-<div id="#HOME" class="w3-container" style="background-color: transparent">
+<!-- <div id="#HOME" class="w3-container" style="background-color: transparent">
   <div class="centered" style>
     <div class="typewriter">
       <h1> Life is greater with Coding</h1>
     </div>
   </div>
-</div>
+</div> -->
 
 
 <!--#SWE-->
 <div class="w3-black" id="SWE">
   <div class="w3-container w3-content w3-padding-64" style="max-width:800px">
     <h2 class="w3-wide w3-center">SOFTWARE ENGINEERING PROJECTS</h2>
-    <p class="w3-opacity w3-center"><i>The all seeing eye of Coding</i></p><br>
+    <p class="w3-opacity w3-center"><i>Tech Stacks: React, Spring, BootStrap... </i></p><br>
 
     <div class="w3-row-padding w3-padding-32" style="margin:0 -16px">
       <div class="w3-third w3-margin-bottom">
