--- a/index.html
+++ b/index.html
@@ -44,18 +44,21 @@
 
 <!-- particles.js container -->
 <div id="particles-js">
-  <section class="seperator-wrapper">
-      <div id="#HOME" class="seperator gradient" style="background-color: transparent">
-        <div class="centered" style>
-          <div class="typewriter">
-            <h1> Life is greater with Coding</h1>
-          </div>
-        </div>
+  <!-- <section class="seperator-wrapper">
+    <div class="seperator gradient">
+    </div>
+  </section> -->
+  <div id="#HOME" class="w3-panel w3-center" style="background-color: transparent">
+    <div class="centered" style>
+      <div class="typewriter">
+        <h1> Life is greater with Coding</h1>
       </div>
-  </section>
+    </div>
+  </div>
+
 </div>
 
-<!-- <div id="#HOME" class="w3-container" style="background-color: transparent">
+<!-- <div id="#HOME" class="w3-panel w3-center" style="background-color: transparent">
   <div class="centered" style>
     <div class="typewriter">
       <h1> Life is greater with Coding</h1>
