--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
     <div class="seperator gradient">
     </div>
   </section> -->
-  <div id="#HOME" class="w3-panel w3-center" style="background-color: transparent">
+  <div id="#HOME" class="w3-display-middle w3-panel w3-center" style="background-color: transparent">
     <div class="centered" style>
       <div class="typewriter">
         <h1> Life is greater with Coding</h1>
