--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
   <!-- #ML -->
 <div class="w3-black" id="ML">
   <div class="w3-container w3-content w3-padding-64" style="max-width:800px">
-    <h3 class="w3-wide w3-center">MACHINE LEARNING</h3>
+    <h3 class="w3-wide w3-center">MACHINE LEARNING PROJECTS</h3>
     <p class="w3-opacity w3-center"><i>The all seeing eye of Coding</i></p><br>
 
     <div class="w3-row-padding w3-padding-32" style="margin:0 -16px">
@@ -152,20 +152,6 @@
         <i class="fa fa-map-marker" style="width:30px"></i> Singapore, SG<br>
         <i class="fa fa-phone" style="width:30px"></i> Phone: +65 9018 1182<br>
         <i class="fa fa-envelope" style="width:30px"> </i> Email: DSOH010@e.ntu.edu.sg<br>
-      </div>
-      <div class="w3-col m6">
-        <form action="/action_page.php" target="_blank">
-          <div class="w3-row-padding" style="margin:0 -16px 8px -16px">
-            <div class="w3-half">
-              <input class="w3-input w3-border" type="text" placeholder="Name" required name="Name">
-            </div>
-            <div class="w3-half">
-              <input class="w3-input w3-border" type="text" placeholder="Email" required name="Email">
-            </div>
-          </div>
-          <input class="w3-input w3-border" type="text" placeholder="Message" required name="Message">
-          <button class="w3-button w3-black w3-section w3-right" type="submit">SEND</button>
-        </form>
       </div>
     </div>
   </div>
