--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
     <h4 class="w3-wide w3-center">CONTACT</h4>
     <p class="w3-opacity w3-center"><i>You have scrolled this far! Thanks for visiting!</i></p>
     <div class="w3-row w3-padding-32">
-      <div class="w3-col m6 w3-large w3-margin-bottom">
+      <div class="w3-display-middle w3-col m6 w3-large w3-margin-bottom">
         <i class="fa fa-map-marker" style="width:30px"></i> Singapore, SG<br>
         <i class="fa fa-phone" style="width:30px"></i> Phone: +65 9018 1182<br>
         <i class="fa fa-envelope" style="width:30px"> </i> Email: DSOH010@e.ntu.edu.sg<br>
