--- a/index.html
+++ b/index.html
@@ -149,9 +149,9 @@
     <p class="w3-opacity w3-center"><i>You have scrolled this far! Thanks for visiting!</i></p>
     <div class="w3-row w3-padding-32">
       <div class="w3-row m6 w3-large w3-margin-bottom">
-        <i class="fa fa-map-marker" style="width:30px"></i> Singapore, SG<br>
-        <i class="fa fa-phone" style="width:30px"></i> Phone: +65 9018 1182<br>
-        <i class="fa fa-envelope" style="width:30px"> </i> Email: DSOH010@e.ntu.edu.sg<br>
+        <i class="fa fa-map-marker" style="width:30px;color:white"></i> Singapore, SG<br>
+        <i class="fa fa-phone" style="width:30px;color:white"></i> Phone: +65 9018 1182<br>
+        <i class="fa fa-envelope" style="width:30px;color:white"> </i> Email: DSOH010@e.ntu.edu.sg<br>
       </div>
     </div>
   </div>
@@ -163,13 +163,10 @@
 
 
 <!-- Footer -->
-<footer class="w3-container w3-padding-64 w3-center w3-opacity w3-light-grey w3-xlarge">
-  <i class="fa fa-facebook-official w3-hover-opacity"></i>
-  <i class="fa fa-instagram w3-hover-opacity"></i>
-  <i class="fa fa-snapchat w3-hover-opacity"></i>
-  <i class="fa fa-pinterest-p w3-hover-opacity"></i>
-  <i class="fa fa-twitter w3-hover-opacity"></i>
-  <i class="fa fa-linkedin w3-hover-opacity"></i>
+<footer class="w3-container w3-padding-64 w3-center w3-opacity w3-black w3-xlarge">
+  <i class="fa fa-facebook-official w3-hover-opacity" style="width:30px;color:white"></i>
+  <i class="fa fa-instagram w3-hover-opacity" style="width:30px;color:white"></i>
+  <i class="fa fa-linkedin w3-hover-opacity" style="width:30px;color:white"></i>
 </footer>
 
 <!-- scripts -->
