--- a/index.html
+++ b/index.html
@@ -152,6 +152,9 @@
         <i class="fa fa-map-marker" style="width:30px;color:white"></i> Singapore, SG<br>
         <i class="fa fa-phone" style="width:30px;color:white"></i> Phone: +65 9018 1182<br>
         <i class="fa fa-envelope" style="width:30px;color:white"> </i> Email: DSOH010@e.ntu.edu.sg<br>
+        <i class="fa fa-map-marker" style="width:30px;color:white"></i> Singapore, SG<br>
+        <i class="fa fa-phone" style="width:30px;color:white"></i> Phone: +65 9018 1182<br>
+        <i class="fa fa-envelope" style="width:30px;color:white"> </i> Email: DSOH010@e.ntu.edu.sg<br>
       </div>
     </div>
   </div>
