--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
   <link rel="stylesheet" media="screen" href="css/style.css">
   <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 <body>
 <!-- Navbar -->
@@ -151,7 +152,9 @@
       <div class="w3-half w3-container w3-margin-bottom">
         <i class="fa fa-map-marker" style="width:30px;color:white"></i> Singapore, SG<br>
         <i class="fa fa-phone" style="width:30px;color:white"></i> Phone: +65 9018 1182<br>
-        <i class="fa fa-map-marker" style="width:30px;color:white"></i> Nanyang Technological University<br>
+      </div>
+      <div class="w3-half w3-container w3-margin-bottom">
+        <i class="fa fa-university" style="width:30px;color:white"></i> Nanyang Technological University<br>
         <i class="fa fa-envelope" style="width:30px;color:white"> </i> Email: DSOH010@e.ntu.edu.sg<br>
       </div>
     </div>
