--- a/index.html
+++ b/index.html
@@ -78,27 +78,59 @@
       <div class="w3-third w3-margin-bottom">
         <img src="/w3images/newyork.jpg" alt="New York" style="width:100%" class="w3-hover-opacity">
         <div class="w3-container w3-white">
-          <p><b>MC for ART</b></p>
-          <p class="w3-opacity">IEEE Hackathon</p>
-          <p>telebot with google script API. CNN model in google cloud, Image Classification, Keras</p>
+          <p><b>Tic-Tac-Toe</b></p>
+          <p class="w3-opacity">CS50x Harvard, Cambridge</p>
+          <p>Utilized Object Oriented Programming skills and built self-made sprites.(C,Love2D,Lua)</p>
           <button class="w3-button w3-black w3-margin-bottom" onclick="document.getElementById('ticketModal').style.display='block'">View Project</button>
         </div>
       </div>
       <div class="w3-third w3-margin-bottom">
         <img src="/w3images/paris.jpg" alt="Paris" style="width:100%" class="w3-hover-opacity">
         <div class="w3-container w3-white">
-          <p><b>Not now lizards!</b></p>
-          <p class="w3-opacity">MLDA</p>
-          <p>Computer Vision, Arduino, ROS</p>
+          <p><b>Sudoku Auto-generation</b></p>
+          <p class="w3-opacity">NTU</p>
+          <p>Customized Graphic User Interface. Created a puzzle generation feature.(Java)</p>
           <button class="w3-button w3-black w3-margin-bottom" onclick="document.getElementById('ticketModal').style.display='block'">In progress</button>
         </div>
       </div>
       <div class="w3-third w3-margin-bottom">
         <img src="/w3images/sanfran.jpg" alt="San Francisco" style="width:100%" class="w3-hover-opacity">
         <div class="w3-container w3-white">
-          <p><b>Titanic Disaster Prediction</b></p>
-          <p class="w3-opacity"></p>
-          <p>ML models, Data cleaning, Variance Testing, Feature engineering.</p>
+          <p><b>Crossy Road</b></p>
+          <p class="w3-opacity">NTU</p>
+          <p>Modelled movements with C# scripts and appearance with Blender.(UNITY3D, Blender, C#)</p>
+          <button class="w3-button w3-black w3-margin-bottom" onclick="document.getElementById('ticketModal').style.display='block'">View Project</button>
+        </div>
+      </div>
+    </div>
+    <!-- Second row of SWE -->
+    <div class="w3-row-padding w3-padding-32" style="margin:0 -16px">
+      <div class="w3-third w3-margin-bottom">
+        <img src="/w3images/newyork.jpg" alt="New York" style="width:100%" class="w3-hover-opacity">
+        <div class="w3-container w3-white">
+          <p><b>E-commerce Website</b></p>
+          <p class="w3-opacity">NTU</p>
+          <p>Developed Database with MYSQL through the use of Scripting. Used React.js framework for frontend with HTML, CSS, JavaScript.
+            Linked functions with Apache Tomcat servlets.(Apache Tomcat, JavaScript, HTML, CSS, MYSQL)</p>
+          <button class="w3-button w3-black w3-margin-bottom" onclick="document.getElementById('ticketModal').style.display='block'">View Project</button>
+        </div>
+      </div>
+      <div class="w3-third w3-margin-bottom">
+        <img src="/w3images/paris.jpg" alt="Paris" style="width:100%" class="w3-hover-opacity">
+        <div class="w3-container w3-white">
+          <p><b>Covid-19 Application</b></p>
+          <p class="w3-opacity">NTU</p>
+          <p>Launched online database with firebase. Linked pages with Apache 
+            Tomcat Servlets through IP configuration.(Android Studio, Kotlin, FireBase)</p>
+          <button class="w3-button w3-black w3-margin-bottom" onclick="document.getElementById('ticketModal').style.display='block'">In progress</button>
+        </div>
+      </div>
+      <div class="w3-third w3-margin-bottom">
+        <img src="/w3images/sanfran.jpg" alt="San Francisco" style="width:100%" class="w3-hover-opacity">
+        <div class="w3-container w3-white">
+          <p><b>Twilio Chatbot</b></p>
+          <p class="w3-opacity">Personal</p>
+          <p>Spring Framework with BootStrap, Postgres DataBase and Twilio interface.</p>
           <button class="w3-button w3-black w3-margin-bottom" onclick="document.getElementById('ticketModal').style.display='block'">View Project</button>
         </div>
       </div>
