--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
           <p><b>Sudoku Auto-generation</b></p>
           <p class="w3-opacity">NTU</p>
           <p>Customized Graphic User Interface. Created a puzzle generation feature.(Java)</p>
-          <button class="w3-button w3-black w3-margin-bottom" onclick="document.getElementById('ticketModal').style.display='block'">In progress</button>
+          <button class="w3-button w3-black w3-margin-bottom" onclick="document.getElementById('ticketModal').style.display='block'">View Project</button>
         </div>
       </div>
       <div class="w3-third w3-margin-bottom">
@@ -122,7 +122,7 @@
           <p class="w3-opacity">NTU</p>
           <p>Launched online database with firebase. Linked pages with Apache 
             Tomcat Servlets through IP configuration.(Android Studio, Kotlin, FireBase)</p>
-          <button class="w3-button w3-black w3-margin-bottom" onclick="document.getElementById('ticketModal').style.display='block'">In progress</button>
+          <button class="w3-button w3-black w3-margin-bottom" onclick="document.getElementById('ticketModal').style.display='block'">View Project</button>
         </div>
       </div>
       <div class="w3-third w3-margin-bottom">
@@ -159,7 +159,7 @@
           <p><b>Not now lizards!</b></p>
           <p class="w3-opacity">MLDA</p>
           <p>Computer Vision, Arduino, ROS</p>
-          <button class="w3-button w3-black w3-margin-bottom" onclick="document.getElementById('ticketModal').style.display='block'">In progress</button>
+          <button class="w3-button w3-black w3-margin-bottom" onclick="document.getElementById('ticketModal').style.display='block'">In Progress</button>
         </div>
       </div>
       <div class="w3-third w3-margin-bottom">
@@ -167,8 +167,39 @@
         <div class="w3-container w3-white">
           <p><b>Titanic Disaster Prediction</b></p>
           <p class="w3-opacity"></p>
-          <p>ML models, Data cleaning, Variance Testing, Feature engineering.</p>
+          <p>ML models, Data cleaning, Variance Testing, Feature engineering</p>
           <button class="w3-button w3-black w3-margin-bottom" onclick="document.getElementById('ticketModal').style.display='block'">View Project</button>
+        </div>
+      </div>
+    </div>
+    <!-- Second Row of ML -->
+    <div class="w3-row-padding w3-padding-32" style="margin:0 -16px">
+      <div class="w3-third w3-margin-bottom">
+        <img src="/w3images/newyork.jpg" alt="New York" style="width:100%" class="w3-hover-opacity">
+        <div class="w3-container w3-white">
+          <p><b>Today-I-Learned</b></p>
+          <p class="w3-opacity">DSTA, Hackathon</p>
+          <p>Prepared Data through Data Cleaning methods and modified parameters for optimization. 
+            Utilized OpenCV and RESNET for our model to identify objects from Datasets</p>
+          <button class="w3-button w3-black w3-margin-bottom" onclick="document.getElementById('ticketModal').style.display='block'">View Project</button>
+        </div>
+      </div>
+      <div class="w3-third w3-margin-bottom">
+        <img src="/w3images/paris.jpg" alt="Paris" style="width:100%" class="w3-hover-opacity">
+        <div class="w3-container w3-white">
+          <p><b>AI Test Kitchen</b></p>
+          <p class="w3-opacity">Google</p>
+          <p>Natural Language Processing</p>
+          <button class="w3-button w3-black w3-margin-bottom" onclick="document.getElementById('ticketModal').style.display='block'">In Progress</button>
+        </div>
+      </div>
+      <div class="w3-third w3-margin-bottom">
+        <img src="/w3images/sanfran.jpg" alt="San Francisco" style="width:100%" class="w3-hover-opacity">
+        <div class="w3-container w3-white">
+          <p><b>Basic MediaPipe</b></p>
+          <p class="w3-opacity"></p>
+          <p>Computer Vision</p>
+          <button class="w3-button w3-black w3-margin-bottom" onclick="document.getElementById('ticketModal').style.display='block'">In Progress</button>
         </div>
       </div>
     </div>
