--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     <div class="w3-bar w3-black w3-card">
       <a class="w3-bar-item w3-button w3-padding-large w3-hide-medium w3-hide-large w3-right" href="javascript:void(0)" onclick="myFunction()" title="Toggle Navigation Menu"><i class="fa fa-bars"></i></a>
       <a href="#HOME" class="w3-bar-item w3-button w3-padding-large">HOME</a>
+      <a href="#EXP" class="w3-bar-item w3-button w3-padding-large">EXP</a>
       <a href="#SWE" class="w3-bar-item w3-button w3-padding-large w3-hide-small">SWE</a>
       <a href="#ML" class="w3-bar-item w3-button w3-padding-large w3-hide-small">ML</a>
       <!-- <a href="#CV" class="w3-bar-item w3-button w3-padding-large w3-hide-small">CV</a> -->
@@ -37,6 +38,7 @@
 
   <!-- Navbar on small screens (remove the onclick attribute if you want the navbar to always show on top of the content when clicking on the links) -->
 <div id="navDemo" class="w3-bar-block w3-black w3-hide w3-hide-large w3-hide-medium w3-top" style="margin-top:46px">
+    <a href="#EXP" class="w3-bar-item w3-button w3-padding-large" onclick="myFunction()">EXP</a>
     <a href="#SWE" class="w3-bar-item w3-button w3-padding-large" onclick="myFunction()">SWE</a>
     <a href="#ML" class="w3-bar-item w3-button w3-padding-large" onclick="myFunction()">ML</a>
     <a href="#CV" class="w3-bar-item w3-button w3-padding-large" onclick="myFunction()">CV</a>
@@ -59,14 +61,18 @@
 
 </div>
 
-<!-- <div id="#HOME" class="w3-panel w3-center" style="background-color: transparent">
-  <div class="centered" style>
-    <div class="typewriter">
-      <h1> Life is greater with Coding</h1>
+<!--#EXP-->
+<div class="w3-black" id="EXP">
+  <div class="w3-container w3-content w3-padding-64" style="max-width:800px">
+    <h2 class="w3-wide w3-center">INTERNSHIP EXPERIENCE</h2>
+    <p class="w3-opacity w3-center"><i>A big thank you to every organisation for hiring me.</i></p><br>
+    <div class="w3-row-padding w3-padding-32" style="margin:0 -16px">
+      <div class="w3-full w3-margin-bottom">
+
+      </div>
     </div>
   </div>
-</div> -->
-
+</div>
 
 <!--#SWE-->
 <div class="w3-black" id="SWE">
@@ -131,7 +137,7 @@
           <p><b>Twilio Chatbot</b></p>
           <p class="w3-opacity">Personal</p>
           <p>Spring Framework with BootStrap, Postgres DataBase and Twilio interface.</p>
-          <button class="w3-button w3-black w3-margin-bottom" onclick="document.getElementById('ticketModal').style.display='block'">View Project</button>
+          <button class="w3-button w3-black w3-margin-bottom" onclick="document.getElementById('ticketModal').style.display='block'">In Project</button>
         </div>
       </div>
     </div>
