--- a/index.html
+++ b/index.html
@@ -71,6 +71,9 @@
         <button>
           <h7 class="text-Blue text-xl font-bold"> Discovermarket</h7>
         </button>
+        <div class="w-full md:w-auto flex flex-wrap justify-center md:justify-start gap-3 mt-3 mb-4 font-semibold 
+        text-sm md:text-xl"><div class="text-theme text-xs md:text-lg">Incoming Full Stack Engineer Intern</div>
+        <div class="hidden md:flex text-sm items-center text-gray-400">(May 2022 - July 2022)</div></div>
       </div>
     </div>
   </div>
