--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
     </div>
   </div>
 </div>
-
+<div class="w-full border-2 border-white rounded-xl mt-4 p-10 md:px-32 md:py-20 md:space-x-32 flex justify-center md:justify-start flex-wrap md:flex-nowrap"><div class="mb-6 p-4 md:mb-0 align-middle flex items-center md:w-2/3 w-4/5"><img src="/static/media/BeeX.f2ab20e6208b91bf1bb6.png" alt=""></div><div class="flex flex-wrap justify-center text-center md:text-left md:block"><button><h3 class="text-white text-xl md:text-3xl font-bold">BeeX Private Limited</h3></button><div class="w-full md:w-auto flex flex-wrap justify-center md:justify-start gap-3 mt-3 mb-4 font-semibold text-sm md:text-xl"><div class="text-theme text-xs md:text-lg">Incoming Full Stack Engineer Intern</div><div class="hidden md:flex text-sm items-center text-gray-400">(May 2022 - July 2022)</div></div><p class="md:text-base text-sm">Over the incoming summer, I will be looking into the design and implementation of the fullstack aspects of the Sambal Platform for BeeX. I'm looking forward to further upgrade my skills in ReactJS, ExpressJS and Microsoft Azure! An exciting adventure is about to unfold, so stay tuned to find out more!</p></div></div>
 <!--#SWE-->
 <div class="w3-black" id="SWE">
   <div class="w3-container w3-content w3-padding-64" style="max-width:800px">
