--- a/index.html
+++ b/index.html
@@ -70,14 +70,12 @@
     <div class="w3-row-padding w3-padding-32" style="margin:0 -16px">
       <div class="w3-third border-2 border-white rounded-xl w3-margin-bottom">
         <img src="/w3images/discover-market-logo-white-vertical.png" alt="DM Logo" style="width:100%" class="w3-hover-opacity">
-        <div class="w-full md:w-auto flex flex-wrap justify-center md:justify-start gap-3 mt-3 mb-4 font-semibold 
-        text-sm md:text-xl"><div class="text-theme text-xs md:text-lg">Software Engineer Intern</div>
+        <div class="w3-margin-bottom text-theme text-xs md:text-lg">Software Engineer Intern</div>
         <div class="hidden md:flex text-sm items-center text-gray-400">(May 2022 - July 2022)</div></div>
       </div>
       <div class="w3-third border-2 border-white rounded-xl w3-margin-bottom">
         <img src="/w3images/DSTA_Logo.png" alt="DM Logo" style="width:100%" class="w3-hover-opacity">
-        <div class="w-full md:w-auto flex flex-wrap justify-center md:justify-start gap-3 mt-3 mb-4 font-semibold 
-        text-sm md:text-xl"><div class="text-theme text-xs md:text-lg">Incoming Algorithm Engineer Intern</div>
+        <div class="w3-margin-bottom text-theme text-xs md:text-lg">Incoming Algorithm Engineer Intern</div>
         <div class="hidden md:flex text-sm items-center text-gray-400">(Aug 2022 - Jan 2023)</div></div>
       </div>
     </div>
