--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
 
   <!-- Navbar on small screens (remove the onclick attribute if you want the navbar to always show on top of the content when clicking on the links) -->
 <div id="navDemo" class="w3-bar-block w3-black w3-hide w3-hide-large w3-hide-medium w3-top" style="margin-top:46px">
+    <a href="#HOME" class="w3-bar-item w3-button w3-padding-large" onclick="myFunction()">HOME</a>
     <a href="#EXP" class="w3-bar-item w3-button w3-padding-large" onclick="myFunction()">EXP</a>
     <a href="#SWE" class="w3-bar-item w3-button w3-padding-large" onclick="myFunction()">SWE</a>
     <a href="#ML" class="w3-bar-item w3-button w3-padding-large" onclick="myFunction()">ML</a>
@@ -144,7 +145,7 @@
           <p><b>Twilio Chatbot</b></p>
           <p class="w3-opacity">Personal</p>
           <p>Spring Framework with BootStrap, Postgres DataBase and Twilio interface.</p>
-          <button class="w3-button w3-black w3-margin-bottom" onclick="document.getElementById('ticketModal').style.display='block'">In Project</button>
+          <button class="w3-button w3-black w3-margin-bottom" onclick="document.getElementById('ticketModal').style.display='block'">In Progress</button>
         </div>
       </div>
     </div>
