--- a/index.html
+++ b/index.html
@@ -124,8 +124,7 @@
         <div class="w3-container w3-white">
           <p><b>E-commerce Website</b></p>
           <p class="w3-opacity">NTU</p>
-          <p>Developed Database with MYSQL through the use of Scripting. Used React.js framework for frontend with HTML, CSS, JavaScript.
-            Linked functions with Apache Tomcat servlets.(Apache Tomcat, JavaScript, HTML, CSS, MYSQL)</p>
+          <p>MYSQL DataBase. React.js framework. Apache Tomcat servlets.(Apache Tomcat, JavaScript, HTML, CSS, MYSQL)</p>
           <button class="w3-button w3-black w3-margin-bottom" onclick="document.getElementById('ticketModal').style.display='block'">View Project</button>
         </div>
       </div>
@@ -134,8 +133,7 @@
         <div class="w3-container w3-white">
           <p><b>Covid-19 Application</b></p>
           <p class="w3-opacity">NTU</p>
-          <p>Launched online database with firebase. Linked pages with Apache 
-            Tomcat Servlets through IP configuration.(Android Studio, Kotlin, FireBase)</p>
+          <p>Firebase. MySQL DataBase. Linked pages with Apache Tomcat Servlets through IP configuration.(Android Studio, Kotlin, FireBase)</p>
           <button class="w3-button w3-black w3-margin-bottom" onclick="document.getElementById('ticketModal').style.display='block'">View Project</button>
         </div>
       </div>
