--- a/index.html
+++ b/index.html
@@ -73,9 +73,12 @@
         <img src="/w3images/discover-market-logo-white-vertical.png" alt="DM Logo" style="width:100%" class="w3-hover-opacity">
         <div class="w3-margin-bottom text-theme text-xs md:text-lg">Software Engineer Intern</div>
         <div class="hidden md:flex text-sm items-center text-gray-400">(May 2022 - July 2022)</div>
+      </div>
+      <div class="w3-third border-2 border-white rounded-xl w3-margin-bottom">
         <img src="/w3images/DSTA_Logo.png" alt="DM Logo" style="width:100%" class="w3-hover-opacity">
         <div class="w3-margin-bottom text-theme text-xs md:text-lg">Incoming Algorithm Engineer Intern</div>
         <div class="hidden md:flex text-sm items-center text-gray-400">(Aug 2022 - Jan 2023)</div>
+      </div>
     </div>
   </div>
 </div>
