--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       <a href="#EXP" class="w3-bar-item w3-button w3-padding-large">EXP</a>
       <a href="#SWE" class="w3-bar-item w3-button w3-padding-large w3-hide-small">SWE</a>
       <a href="#ML" class="w3-bar-item w3-button w3-padding-large w3-hide-small">ML</a>
-      <!-- <a href="#CV" class="w3-bar-item w3-button w3-padding-large w3-hide-small">CV</a> -->
+      <a href="#RESUME" class="w3-bar-item w3-button w3-padding-large w3-hide-small">RESUME</a>
       <a href="#CONTACT" class="w3-bar-item w3-button w3-padding-large w3-hide-small">CONTACT</a>
       <div class="w3-dropdown-hover w3-hide-small">
         <button class="w3-padding-large w3-button" title="More">MORE <i class="fa fa-caret-down"></i></button>     
@@ -39,11 +39,12 @@
 
   <!-- Navbar on small screens (remove the onclick attribute if you want the navbar to always show on top of the content when clicking on the links) -->
 <div id="navDemo" class="w3-bar-block w3-black w3-hide w3-hide-large w3-hide-medium w3-top" style="margin-top:46px">
-    <a href="particles.js" class="w3-bar-item w3-button w3-padding-large" onclick="myFunction()">HOME</a>
+    <a href="#HOME" class="w3-bar-item w3-button w3-padding-large" onclick="myFunction()">HOME</a>
     <a href="#EXP" class="w3-bar-item w3-button w3-padding-large" onclick="myFunction()">EXP</a>
     <a href="#SWE" class="w3-bar-item w3-button w3-padding-large" onclick="myFunction()">SWE</a>
     <a href="#ML" class="w3-bar-item w3-button w3-padding-large" onclick="myFunction()">ML</a>
-    <a href="#CV" class="w3-bar-item w3-button w3-padding-large" onclick="myFunction()">CV</a>
+    <a href="#RESUME" class="w3-bar-item w3-button w3-padding-large" 
+    href="https://drive.google.com/file/d/1ecOtJ2PfTUjV5Ln-1ORLhrZiZt7FqeEf/view?usp=sharing" >RESUME</a>
     <a href="#CONTACT" class="w3-bar-item w3-button w3-padding-large" onclick="myFunction()">CONTACT</a>
   </div>
 
